# rustpress-plugin-rustmedia

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/css/: admin.css
assets/js/: admin.js  folders.js  settings.js  upload.js
migrations/: 001_create_tables.sql
src/: lib.rs  plugin.rs  settings.rs
src/admin/: dashboard.rs  folders.rs  library.rs  mod.rs  settings.rs  upload.rs
src/handlers/: folder.rs  media.rs  mod.rs  upload.rs
src/models/: folder.rs  image.rs  media.rs  mod.rs
src/services/: folder.rs  image.rs  media.rs  mod.rs  optimizer.rs  storage.rs  upload.rs
